--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,565 @@
 body {
+    width: 100vw;
+    font-family: "Montserrat", "Open Sans", sans-serif;
+}
 
+h1, h2 {
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper
+{
+    width: 960px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.header {
+    background-color: rgb(94, 194, 231);
+    font-weight: bold;
+    color: white;
+}
+
+.header .wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    vertical-align: text-bottom;
+}
+
+.header__title {
+    font-size: 24px;
+    line-height: 28px;
+    padding-top: 50px;
+}
+
+.nav__items {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    list-style-type: none;
+    padding-top: 0;
+}
+
+.nav__item {
+    display: inline-block;
+    text-decoration: none;
+    padding: 15px;
+    padding-top: 40px;
+    color: white;
+}
+
+.title {
+    background-color: rgb(94, 194, 231);
+    color: white;
+    padding-top: 250px;
+    padding-bottom: 310px;
+    text-align: center;
+}
+
+.title__title {
+    margin-top: 0;
+    font-size: 60px;
+    line-height: 77px;
+}
+
+.title__description {
+    position: relative;
+    top: 0px;
+    font-weight: 400;
+}
+
+.title__arrow {
+    position: absolute;
+    display: block;
+    width: 45px;
+    height: 45px;
+    left: 480px;
+    bottom: -250px;
+    color: white;
+    text-decoration: none;
+    border: 2px solid white;
+    border-radius: 50%;
+    font-size: 40px;
+}
+
+.slider-responsibilities {
+    background-color: rgb(244, 244, 244);
+}
+
+.slide {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 90px;
+    padding-bottom: 155px;
+}
+
+.slide__image {
+    width: 340px;
+}
+
+.slide1 {
+    position: relative;
+}
+
+.slide1__rect {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 42px;
+    font-weight: bold;
+}
+
+.slide1__ui {
+    top: 95px;
+    left: 0px;
+    color: white;
+    background: rgb(52, 207, 117);
+    z-index: 1;
+}
+
+.slide1__ux {
+    top: 95px;
+    left: 140px;
+    color: rgb(255, 96, 95);
+    background: rgba(231, 231, 231, 0.5);
+    z-index: 2;
+}
+
+.slide1__ui span,
+.slide1__ux span {
+    display: inline-block;
+    padding-top: 75px;
+}
+
+.slide__description {
+    width: 460px;
+}
+
+.slide__title {
+    margin-bottom: 20px;
+}
+
+.portfolio {
+    background-color: rgb(251, 251, 251);
+}
+
+.portfolio .wrapper {
+    text-align: center;
+}
+
+.portfolio__title {
+    padding-top: 100px;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    margin-bottom: 75px;
+}
+
+.portfolio__title::after {
+    content: "";
+    display: block;
+    height: 3px;
+    width: 100px;
+    position: relative;
+    top: 5px;
+    margin: 0 auto;
+    background-color: rgb(227, 227, 227);
+}
+
+.portfolio-grid-container {
+    display: grid;
+    grid-template-areas: "i1 bi bi i2"
+                         "i3 bi bi i4"
+                         "i5 i6 i7 i8";
+    grid-template-columns: 220px 220px 220px 220px;
+    grid-template-rows: 155px 155px 155px;
+    row-gap: 25px;
+    column-gap: 20px;
+    margin-bottom: 30px;
+}
+
+.portfolio-grid-container > div {
+    border-radius: 25px;
+}
+
+.portfolio__item-big {
+    grid-area: bi;
+    background-color: rgb(94, 194, 231);
+}
+
+
+.portfolio__item-1 {
+    grid-area: i1;
+    background-color: rgb(244, 244, 244);
+}
+
+.portfolio__item-2 {
+    grid-area: i2;
+    background-color: rgb(244, 244, 244);
+}
+
+.portfolio__item-3 {
+    grid-area: i3;
+    background-color: rgb(244, 244, 244);
+}
+
+.portfolio__item-4 {
+    grid-area: i4;
+    background-color: rgb(244, 244, 244);
+}
+
+.portfolio__item-5 {
+    grid-area: i5;
+    background-color: rgb(244, 244, 244);
+}
+
+.portfolio__item-6 {
+    grid-area: i6;
+    background-color: rgb(244, 244, 244);
+}
+
+.portfolio__item-7 {
+    grid-area: i7;
+    background-color: rgb(244, 244, 244);
+}
+
+.portfolio__item-8 {
+    grid-area: i8;
+    background-color: rgb(244, 244, 244);
+}
+
+.portfolio__browse { 
+    display: inline-block;
+    text-decoration: none;
+    color: rgb(94, 194, 231);
+    padding: 10px 30px;
+    border: 3px solid rgb(94, 194, 231);
+    border-radius: 5px;
+    margin-bottom: 80px;
+}
+
+.skills {
+    background-color: rgb(244, 244, 244);
+}
+
+.skills__title {
+    padding-top: 100px;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    margin-bottom: 75px;
+}
+
+.skills__title::after {
+    content: "";
+    display: block;
+    height: 3px;
+    width: 100px;
+    position: relative;
+    top: 5px;
+    margin: 0 auto;
+    background-color: rgb(227, 227, 227);
+}
+
+.skills__description {
+    margin-bottom: 110px;
+    font-family: "Open Sans";
+    text-align: center;
+    color: rgb(102, 102, 102);
+}
+
+.skills__visualize {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: rgb(102, 102, 102);
+    text-align: center;
+    padding-bottom: 170px;
+}
+
+.skills__visualize h2 {
+    font-size: 58px;
+    margin-top: 65px;
+}
+
+.skills__UI {
+    width: 215px;
+    height: 215px;
+    background: url('../images/skills-ui.png') no-repeat;
+    background-size: cover;
+}
+
+.skills__frontend {
+    width: 215px;
+    height: 215px;
+    background: url('../images/skills-frontend.png') no-repeat;
+    background-size: cover;
+}
+
+.skills__UX {
+    width: 215px;
+    height: 215px;
+    background: url('../images/skills-ux.png') no-repeat;
+    background-size: cover;
+}
+
+.skills__icons {
+    width: 215px;
+    height: 215px;
+    background: url('../images/skills-icons.png') no-repeat;
+    background-size: cover;
+}
+
+.work{
+    padding-top: 140px;
+    padding-bottom: 120px;
+    background-color: rgb(251, 251, 251);
+}
+
+.work__wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.work__content {
+    width: 340px;
+}
+
+.work__title {
+    font-size: 28px;
+    padding-bottom: 45px;
+}
+
+.work__description {
+    font-size: 16px;
+    line-height: 31px;
+    color: rgb(102, 102, 102);
+}
+
+.btn {
+    display: inline-block;
+    text-decoration: none;
+    color: rgb(94, 194, 231);
+    padding: 10px 30px;
+    border: 3px solid rgb(94, 194, 231);
+    border-radius: 5px;
+    margin-bottom: 80px;
+}
+
+.work__companies {
+    position: relative;
+    width: 480px;
+}
+
+.work__companies::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 3px;
+    height: 100%;
+    left: -30px;
+    background-color: rgb(205, 205, 205);
+}
+
+.work__date {
+    position: relative;
+    left: -50px;
+    background-color: rgb(251, 251, 251);
+    color: rgb(205, 205, 205);
+    padding: 5px;
+    font-weight: 700;
+}
+
+.work__item {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+}
+
+.work__item::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 20px;
+    left: -38px;
+    width: 14px;
+    height: 14px;
+    border: 3px solid rgb(205, 205, 205);
+    border-radius: 50%;
+    background-color: rgb(251, 251, 251);
+}
+
+.work__image {
+    margin-right: 25px;
+}
+
+.work__item-description h3{
+    margin-top: 0;
+    font-size: 18px;
+    line-height: 26px;
+    font-weight: 700;
+}
+
+.work__item-description span {
+    font-size: 14px;
+    line-height: 26px;
+    font-weight: 400;
+}
+
+.work__item-description p {
+    font-size: 13px;
+    line-height: 22px;
+    font-weight: 400;
+    color: rgb(153, 153, 153);
+}
+
+.slider-citations {
+    background-color: rgb(255, 96, 95);
+    color: white;
+    font-style: italic;
+}
+
+.slider-citations .slide {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.slide__citation {
+    text-align: center;
+    font-size: 24px;
+    line-height: 36px;
+}
+
+.slide__author {
+    color: rgb(205, 205, 205);
+    font-size: 16px;
+    line-height: 36px;
+}
+
+.contact {
+    padding-top: 90px;
+    padding-bottom: 125px;
+    background-color: rgb(244, 244, 244);
+}
+
+.contact__content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.contact__title {
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    margin-bottom: 75px;
+}
+
+.contact__title::after {
+    content: "";
+    display: block;
+    height: 3px;
+    width: 100px;
+    position: relative;
+    top: 5px;
+    margin: 0 auto;
+    background-color: rgb(227, 227, 227);
+}
+
+.contact__form {
+    display: grid;
+    grid-template-areas:    "name addr addr"
+                            "budg budg budg"
+                            "time time time"
+                            "mess mess mess"
+                            "empt empt send";
+    grid-template-columns: 300px 140px 140px;
+    grid-template-rows: 55px 55px 55px 140px 55px;
+    row-gap: 20px;
+    column-gap: 15px;
+}
+
+.contact__name {
+    grid-area: name;
+}
+
+.contact__email {
+    grid-area: addr;
+}
+
+.contact__budget {
+    grid-area: budg;
+}
+
+.contact__timeline {
+    grid-area: time;
+}
+
+.contact__about {
+    grid-area: mess;
+}
+
+.contact__send {
+    grid-area: send;
+    border: none;
+    background-color: rgb(255, 96, 95);
+    color: white;
+    font-weight: 700;
+}
+
+.contact__links {
+    width: 190px;
+}
+
+.contact__links-title {
+    position: relative;
+    top: -9px;
+    margin-bottom: 5px;
+    font-size: 13px;
+    line-height: 26px;
+    color: rgb(205, 205, 205);
+}
+
+.contact__location p {
+    margin-bottom: 50px;
+    font-family: "Open Sans";
+    font-size: 15px;
+    line-height: 22px;
+    color: black;
+}
+
+.social a{
+    display: inline-block;
+    position: relative;
+    margin-bottom: 15px;
+    color: black;
+    text-decoration: none;
+    opacity: 0.3;
+}
+
+.social a:hover {
+    opacity: 1;
+}
+
+.social a span {
+    position: relative;
+    top: -10px;
+    left: 20px;
+}
+
+.map {
+    background-color: rgb(79, 193, 233);
+}
+
+.footer {
+    background-color: rgb(54, 56, 66);
 }
