--- a/css/styles.css
+++ b/css/styles.css
@@ -15,75 +15,146 @@ h1, h2 {
     position: relative;
 }
 
+/*header styling*/
 .header {
+    padding-top: 50px;
     background-color: rgb(94, 194, 231);
+    background-image: url("../images/add-image-bg.png");
+    background-size: cover;
+    background-position-y: center;
+    background-position-x: center;
     font-weight: bold;
     color: white;
 }
 
 .header .wrapper {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    vertical-align: text-bottom;
+    flex-direction: column;
 }
 
 .header__title {
-    font-size: 24px;
-    line-height: 28px;
-    padding-top: 50px;
+    font-weight: 700;
+    font-size: 28px;
+}
+
+.nav {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav__items {
+    list-style-type: none;
     display: flex;
     flex-direction: row;
-    justify-content: end;
-    list-style-type: none;
-    padding-top: 0;
 }
 
 .nav__item {
-    display: inline-block;
+    position: relative;
+    padding: 0px 15px 0px 15px;
     text-decoration: none;
-    padding: 15px;
-    padding-top: 40px;
     color: white;
+}
+
+.nav__item-arrowed {
+    padding: 0px 35px 0px 15px;
+}
+
+.nav__item-arrowed::after,
+.nav__item-arrowed::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 4px;
+    height: 12px;
+    border-radius: 2px;
+    background-color: white;
+}
+
+.nav__item-arrowed::after {
+    top: 4px;
+    right: 15px;
+    transform: rotate(45deg);
+}
+
+.nav__item-arrowed::before {
+    top: 4px;
+    right: 21px;
+    transform: rotate(-45deg);
+}
+
+.nav__item span {
+    padding-bottom: 5px;
+}
+
+.nav__item-underlined span {
+    border-bottom: 4px solid white;
 }
 
 .title {
-    background-color: rgb(94, 194, 231);
-    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding-top: 250px;
-    padding-bottom: 310px;
-    text-align: center;
+    padding-bottom: 50px;
 }
 
 .title__title {
-    margin-top: 0;
+    font-weight: 700;
     font-size: 60px;
     line-height: 77px;
+    margin-bottom: 5px;
 }
 
 .title__description {
-    position: relative;
-    top: 0px;
     font-weight: 400;
+    font-size: 18px;
+    margin-bottom: 210px;
 }
 
 .title__arrow {
-    position: absolute;
     display: block;
-    width: 45px;
-    height: 45px;
-    left: 480px;
-    bottom: -250px;
-    color: white;
-    text-decoration: none;
+    position: relative;
+    width: 46px;
+    height: 46px;
     border: 2px solid white;
     border-radius: 50%;
-    font-size: 40px;
 }
 
+.title__arrow div {
+    position: absolute;
+    width: 2px;
+    height: 20px;
+    top: 12px;
+    left: 22px;
+    background-color: white;
+}
+
+.title__arrow div::before,
+.title__arrow div::after {
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 15px;
+    transform: rotate(45deg);
+    background-color: white;
+}
+
+.title__arrow div::before {
+    top: 7px;
+    left: 5px;
+    transform: rotate(45deg);
+}
+
+.title__arrow div::after {
+    top: 7px;
+    left: -5px;
+    transform: rotate(-45deg);
+}
+/*first slider styling*/
 .slider-responsibilities {
     background-color: rgb(244, 244, 244);
 }
@@ -187,9 +258,13 @@ h1, h2 {
     border-radius: 25px;
 }
 
+.portfolio__item:hover {
+    background-color: rgb(94, 194, 231);
+}
+
 .portfolio__item-big {
     grid-area: bi;
-    background-color: rgb(94, 194, 231);
+    background-color: rgb(244, 244, 244);
 }
 
 
