--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ h1, h2 {
 
 /*first slider styling*/
 .slider-responsibilities {
+    height: 400px;
     background-color: rgb(244, 244, 244);
 }
 
@@ -165,9 +166,10 @@ h1, h2 {
 }
 
 .slider__controls {
+    position: absolute;
+    top: 300px;
     left: 50%;
-	margin-left: -98px;
-	position: absolute;
+    margin-left: -65px;
 }
 
 .slider-responsibilities label {
@@ -198,21 +200,42 @@ h1, h2 {
 	border-radius: 50%;
 }
 
+.wrapper label:hover, 
+#slide1-resp:checked ~ .slider__controls label:nth-of-type(1),
+#slide2-resp:checked ~ .slider__controls label:nth-of-type(2),
+#slide3-resp:checked ~ .slider__controls label:nth-of-type(3),
+#slide4-resp:checked ~ .slider__controls label:nth-of-type(4),
+#slide5-resp:checked ~ .slider__controls label:nth-of-type(5) {
+	background: #ddd;
+}
+
 .slide {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding-top: 90px;
     padding-bottom: 155px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    z-index: 0;
+}
+
+#slide1-resp:checked ~ .slider > .slide1,
+#slide2-resp:checked ~ .slider > .slide2,
+#slide3-resp:checked ~ .slider > .slide3,
+#slide4-resp:checked ~ .slider > .slide4,
+#slide5-resp:checked ~ .slider > .slide5 {
+	opacity: 1;
+	z-index: 1;
 }
 
 .slide__image {
     width: 340px;
     height: 200px;
-}
-
-.slide1 {
-    position: relative;
 }
 
 .slide1__rect {
